--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-inject": "^4.3.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.3.0",
@@ -24,10 +26,14 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "pump": "^3.0.0",
+    "rimraf": "^2.6.2",
     "run-sequence": "^2.2.1",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.4.5",
-    "gulp-inject": "^4.3.2",
-    "rimraf": "^2.6.2"
+    "uglify-js": "^3.4.5"
+  },
+  "dependencies": {
+    "compression": "^1.7.3",
+    "express": "^4.16.3",
+    "gulp-remove-html-comments": "^1.0.1"
   }
 }
