--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-inject": "^4.3.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify": "^3.1.0",
+    "gulp-natural-sort": "^0.1.1",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
